[package]
name = "cargo-cranky"
authors = ["Eric Seppanen <eds@reric.net>"]
description = "Easy to configure wrapper for clippy"
keywords = ["cargo", "clippy", "lint", "lints"]
categories = ["development-tools::cargo-plugins"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ericseppanen/cargo-cranky"
readme = "README.md"
rust-version = "1.56"

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.5.9"
cargo = "0.68.0"
clap = "4.1.4"
toml_edit = { version = "0.15.0", features = ["serde", "easy"] }

[package.metadata.release]
dev-version = false
pre-release-commit-message = "release {{version}}"

[workspace.metadata.lints]
deny = ["unsafe_code"]